# VSH

./: .gitignore  .mcp.json  FIXES_AND_IMPROVEMENTS.md  HANDOFF.md  INTEGRATION_NOTES.md  L1-test-result.md  L1_L2_INTEGRATION_PROGRESS.md  L1_L2_SCHEMA_COORDINATION.md  LAYER2_DEV_STATUS_REPORT.md  README.md  SETUP_FINAL.md  env 파일 예시.txt  fix_emoji.py  guide.md  main.py  mcp_server_unified.py  pyproject.toml  requirements.txt  run_vsh.bat  setup_and_run.ps1  sonar-project.properties  vsh_demo.py  vsh_watcher.py  vuln_sample.py
.claude/: settings.local.json
L2-Architecture/: 01-context-and-role.md  02-goals-scope-and-contracts.md  03-architecture.md  04-branch-strategy.md  05-roadmap-and-milestones.md  06-testing-and-risks.md  07-next-actions.md  README.md
VSH-l1-l2-integration/: .gitignore  README.md
VSH_Project_MVP/: .env.example  .gitignore  ARCHITECTURE.md  CONVENTIONS.md  PROGRESS.md  config.py  output_real.txt  requirements.txt
annotated_demo/: demo_vulnerable.py  function_level_demo.py
docs/: L1_L2_INTEGRATION_PROGRESS.md  L1_L2_SCHEMA_COORDINATION.md  PROJECT_OVERVIEW.md  README.md  architecture.md  contracts.md  layer1.md  layer2.md  layer3.md  pipeline.md  roadmap.md
l3-dev/: .env_example  .gitignore  260316_develop.md  260316_finished_task.md  API_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  DB_SCHEMA.md  GEMINI.md  NAMING.md  README.md  RULES.md  SETUP.md  TASK.md  TROUBLESHOOTING.md  bom_test.json  check_api.py  check_cwe.py  debug_poc.py  fix_test.py  mcp_server.py  requirements.txt  shared_team.md  sqli_vuln.py  test_l3_e2e.py  test_out.json  test_poc_safe.py  test_poc_target.py  test_real_sbom.py  verify_llm.py  vuln_sample.py  week1_develop.md
modules/: __init__.py
pipeline/: analysis_pipeline.py
reports/: vsh_report_20260326_163237.md  vsh_report_20260328_220159.md  vsh_report_20260328_225307.md  vsh_report_20260328_230402.md  vsh_report_20260328_232507.md  vsh_report_20260330_130249.md  vsh_report_20260330_131644.md  vsh_report_20260330_132553.md  vsh_report_20260330_133234.md  vsh_report_20260330_145612.md  vsh_report_20260330_145956.md  vsh_report_20260330_151020.md  vsh_report_20260330_151529.md  vsh_report_20260330_153534.md  vsh_report_20260330_154508.md  vsh_report_20260330_160030.md  (+6 more)
tests/: test_l1.py  (+8 more)
(+221 files in other folders)
