[project]
name = "vsh"
version = "0.1.0"
description = "Vibe Secure Helper MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.6.0,<1.0.0",
]
mcp = [
    "fastmcp>=0.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
